--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "url shortner api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "lint": "eslint ."
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "eslint": "^8.45.0",
     "express": "^4.18.2",
     "mongoose": "^7.4.0",
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "nodemon": "^3.0.1"
   }
 }
