--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.45.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^7.4.0",
     "nanoid": "^4.0.2",
     "nodemon": "^3.0.1"
