--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "eslint": "^8.45.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^7.4.0",
-    "nanoid": "^4.0.2",
+    "nanoid": "^3.3.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.45.0",
     "nodemon": "^3.0.1"
   }
 }
