--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "url shortner api",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production index.js",
+    "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
     "lint": "eslint ."
   },
